# Fusion2Drive

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: carla_sim.yaml  eval.yaml  export_lite.yaml  train_colab.yaml  train_full.yaml  train_tiny.yaml
scripts/: benchmark_infer.py  build_cache.py  demo.py  download_waymo.py  evaluate.py  export_model.py  run_carla_sim.py  train.py
wod_fusion/: __init__.py
wod_fusion/data/: __init__.py  cache.py  datamodule.py  dataset.py  transforms.py  waymo_parser.py
wod_fusion/eval/: __init__.py  evaluator.py  metrics.py
wod_fusion/export/: __init__.py  exporter.py
wod_fusion/models/: __init__.py  bev_backbone.py  camera_encoder.py  detection_head.py  fusion_model.py  lidar_encoder.py  planning_head.py
wod_fusion/sim/: __init__.py  carla_client.py  controllers.py  sensor_interface.py
wod_fusion/training/: __init__.py  losses.py  scheduler.py  trainer.py
wod_fusion/utils/: __init__.py  checkpoint.py  geometry.py  visualization.py
